# IvyEngine

./: .gitignore  CMakeLists.txt  README.md  build-debug.bat
Engine/: CMakeLists.txt  pch.h
Engine/src/Core/: Application.cpp  Application.h  Event.h
Engine/src/Core/Events/: Event.cpp  Event.h  InputEvents.h
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
